<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_result"
                android:background="#CCEEFF"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <!-- code for whole block -->
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- code for numbers block -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- code for 1-2-3 number block -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/number_1"
                        android:text="@string/one"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_2"
                        android:text="@string/two"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_3"
                        android:text="@string/three"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

                <!-- code for 4-5-6 number block -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/number_4"
                        android:text="@string/four"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_5"
                        android:text="@string/five"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_6"
                        android:text="@string/six"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

                <!-- code for 7-8-9 number block -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/number_7"
                        android:text="@string/seven"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_8"
                        android:text="@string/eight"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <Button
                        android:id="@+id/number_9"
                        android:text="@string/nine"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

                <!-- code for 0 number block -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/number_0"
                        android:text="@string/zero"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

            </LinearLayout>

            <!-- code for operators block -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/b_plus"
                    android:text="@string/plus"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/b_result"
                    android:text="@string/equal"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/b_clean"
                    android:text="@string/clean"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
